--- a/app/src/main/res/layout/fragment_upsert_book.xml
+++ b/app/src/main/res/layout/fragment_upsert_book.xml
@@ -1,19 +1,224 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
+    tools:context=".ui.admin.upsertBook.UpsertBookFragment">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:paddingBottom="50dp"
     tools:context=".ui.admin.upsertBook.UpsertBookFragment">
 
   <com.group2.bookstoreproject.base.customView.CustomToolbar
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      app:textStart="Quay lại"
-      app:textStartSize="16"
-      app:showShadow="true"
       android:id="@+id/upsetBookToolbar"
-      />
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:showShadow="true"
+      app:textStart="Quay lại"
+      app:textStartSize="16" />
 
-</RelativeLayout>
+  <LinearLayout
+      android:id="@+id/linearLayout"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      android:padding="16dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/upsetBookToolbar">
+    <FrameLayout
+        android:layout_width="135dp"
+        android:layout_height="180dp"
+        android:layout_marginEnd="16dp"
+        android:background="#333"
+        >
+      <ImageView
+        android:id="@+id/book_cover"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+          android:layout_margin="1dp"
+        android:contentDescription="@string/book_cover"
+        android:src="@drawable/empty_image"
+        android:scaleType="centerCrop" />
+    </FrameLayout>
+
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+      <com.google.android.material.textfield.TextInputLayout
+          android:id="@+id/tilTitle"
+          style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:hint="Title">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@android:color/transparent" />
+
+      </com.google.android.material.textfield.TextInputLayout>
+
+      <com.google.android.material.textfield.TextInputLayout
+          android:id="@+id/tilAuthor"
+          style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="20dp"
+          android:hint="Author">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etAuthor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@android:color/transparent" />
+
+      </com.google.android.material.textfield.TextInputLayout>
+
+    </LinearLayout>
+
+  </LinearLayout>
+
+
+
+  <LinearLayout
+      android:id="@+id/linearLayout2"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginHorizontal="16dp"
+      android:layout_marginTop="10dp"
+      android:orientation="vertical"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
+      <com.google.android.material.textfield.TextInputLayout
+          android:id="@+id/tilPrice"
+          style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
+          android:layout_width="0dp"
+          android:layout_weight="1"
+          android:layout_height="wrap_content"
+          android:hint="Price">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etPrice"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@android:color/transparent"
+            android:inputType="numberDecimal" />
+
+      </com.google.android.material.textfield.TextInputLayout>
+      <com.google.android.material.textfield.TextInputLayout
+          android:id="@+id/tilStock"
+          style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
+          android:layout_width="0dp"
+          android:layout_marginLeft="20dp"
+          android:layout_weight="1"
+          android:layout_height="wrap_content"
+          android:hint="Stock">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etStock"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@android:color/transparent"
+            android:inputType="number" />
+
+      </com.google.android.material.textfield.TextInputLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_marginTop="20dp">
+      <TextView
+          android:id="@+id/tvCategory"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="Category: "
+          android:layout_marginLeft="12dp"
+          android:textSize="16sp"
+          android:textColor="@android:color/black"
+          />
+      <Spinner
+          android:id="@+id/spinnerCategory"
+          android:layout_width="match_parent"
+          android:layout_height="60dp"
+         android:layout_marginLeft="20dp"
+          android:background="@drawable/image_border"/>
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:gravity="center_vertical"
+        android:layout_marginTop="20dp"
+        android:layout_height="wrap_content" android:orientation="horizontal">
+      <TextView
+          android:id="@+id/tvSliderValue"
+          android:layout_width="50dp"
+          android:layout_height="wrap_content"
+          android:text="Sale: "
+          android:layout_marginLeft="12dp"
+          android:textSize="16sp"
+          android:textColor="@android:color/black"
+           />
+
+      <SeekBar
+          android:id="@+id/seekBarSale"
+          android:layout_marginLeft="20dp"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:max="100"
+          android:progress="0" />
+
+
+    </LinearLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tilDescription"
+        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
+        android:layout_width="match_parent"
+        android:layout_marginTop="20dp"
+        android:layout_height="wrap_content"
+        android:hint="Description">
+
+      <com.google.android.material.textfield.TextInputEditText
+          android:id="@+id/etDescription"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:backgroundTint="@android:color/transparent" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="30dp"
+        android:paddingVertical="15dp"
+        android:text="Lưu Sách"
+        android:textStyle="bold"
+        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small" />
+
+  </LinearLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout> </androidx.core.widget.NestedScrollView>
