--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -310,7 +310,7 @@
                 android:text="Tổng thanh toán" />
         </LinearLayout>
 
-        <TextView
+        <Button
             android:id="@+id/tv_Checkout"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
