--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,7 +16,7 @@
     <color name="navigation_checked_color">#ff6c2f</color>
     <color name="navigation_checked_color_icon">#fff</color>
 
-    <color name="primaryColor">#ff6c2f</color>
+    <color name="primaryColor">#00BCD4</color>
     <color name="primaryLightColor">#ff9e5d</color>
     <color name="primaryDarkColor">#c53a00</color>
 
