--- a/app/src/main/res/navigation/cus_nav.xml
+++ b/app/src/main/res/navigation/cus_nav.xml
@@ -110,5 +110,17 @@
         <action
             android:id="@+id/action_paymentFragment_to_navigation_cus_cart"
             app:destination="@id/navigation_cus_cart" />
+        <action
+            android:id="@+id/action_paymentFragment_to_paymentResultFragment"
+            app:destination="@id/paymentResultFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/paymentResultFragment"
+        android:name="com.group2.bookstoreproject.ui.customer.payment.PaymentResultFragment"
+        android:label="fragment_payment_result"
+        tools:layout="@layout/fragment_payment_result" >
+        <action
+            android:id="@+id/action_paymentResultFragment_to_paymentFragment"
+            app:destination="@id/paymentFragment" />
     </fragment>
 </navigation>
