update profile admin + shipper

--- a/app/src/main/res/menu/admin_menu_navigation.xml
+++ b/app/src/main/res/menu/admin_menu_navigation.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:id="@+id/navigation_dashbard" android:title="dashboard" android:icon="@drawable/ic_dashboard_24"/>
     <item android:id="@+id/navigation_books" android:title="Kho sách" android:icon="@drawable/ic_collections_bookmark_24"/>
     <item android:id="@+id/navigation_account" android:title="Người dùng" android:icon="@drawable/ic_supervisor_account_24"/>
     <item android:id="@+id/navigation_order" android:title="Đơn hàng" android:icon="@drawable/ic_receipt_long_24"/>
     <item android:id="@+id/navigation_chatlist" android:title="Tin nhắn" android:icon="@drawable/ic_chat_24px"/>
+    <item android:id="@+id/navigation_admin_profile" android:title="Hồ sơ" android:icon="@drawable/ic_avatar_profile"/>
 
 </menu>
