--- a/app/src/main/res/navigation/admin_nav.xml
+++ b/app/src/main/res/navigation/admin_nav.xml
@@ -3,13 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/admin_nav"
-    app:startDestination="@id/navigation_dashbard">
+    app:startDestination="@id/navigation_books">
 
-    <fragment
-        android:id="@+id/navigation_dashbard"
-        android:name="com.group2.bookstoreproject.ui.admin.dashboard.DashboardFragment"
-        android:label="fragment_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
     <fragment
         android:id="@+id/navigation_books"
         android:name="com.group2.bookstoreproject.ui.admin.bookManager.BookManagerFragment"
@@ -95,4 +90,9 @@
             android:id="@+id/action_orderDetailsFragment3_to_orderListFragment3"
             app:destination="@id/navigation_order" />
     </fragment>
+    <fragment
+        android:id="@+id/navigation_admin_profile"
+        android:name="com.group2.bookstoreproject.ui.customer.profile.ProfileFragment"
+        android:label="fragment_profile"
+        tools:layout="@layout/fragment_profile" />
 </navigation>
